--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,8 +6,12 @@ COPY ./requirements.txt /app/requirements.txt
 
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
+COPY ./scripts /app/scripts
 COPY ./app /app/app
 COPY ./alembic /app/alembic
 COPY ./alembic.ini /app/alembic.ini
 
+RUN chmod +x /app/scripts/wait-for-it.sh && \
+    chmod +x /app/scripts/run.sh
+    
 CMD ["scripts/run.sh"]
