Added permission to execute deploy.sh

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,4 +19,5 @@ jobs:
         script: |
           cd /usr/src/app
           git pull origin production
+          chmod +x ./ci-cd/deploy.sh
           ./ci-cd/deploy.sh
