--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM node:12.7-alpine AS build
 WORKDIR /usr/src/app
 COPY package.json ./
 RUN npm install
-COPY . .
+COPY ./src /usr/src/app/src
 RUN npm run-script build
 
 ### STAGE 2: Run ###
