--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,15 +2,15 @@ name: Deploy to server
 
 on:
   push:
-    branches: [ production ]
+    branches: [ master ]
   pull_request:
-    branches: [ production ]
+    branches: [ master ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest 
     steps:
-    - name: executing remote ssh commands using password
+    - name: executing remote ssh deploy commands
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SERVER_SSH_HOST }}
