--- a/frontend/Caddyfile
+++ b/frontend/Caddyfile
@@ -7,11 +7,7 @@ route qwork.sizikov.space/api/* {
     reverse_proxy backend:8000
 }
 
-route qwork.sizikov.space/docs {
-    reverse_proxy backend:8000
-}
-
-route qwork.sizikov.space/openapi.json {
+qwork.sizikov.space/openapi.json {
     reverse_proxy backend:8000
 }
 
