--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "qwork-front",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "Qwork-frontend",
+  "version": "0.0.2",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack src/index.js --output bin/app.js -d --watch",
-    "build": "webpack src/index.js --output bin/app.js -p"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "mithril": "^2.0.4"
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "package": "svelte-kit package",
+    "preview": "svelte-kit preview",
+    "prepare": "svelte-kit sync",
+    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.3.12"
-  }
+    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "^1.0.0-next.29",
+    "@sveltejs/kit": "next",
+    "autoprefixer": "^10.4.4",
+    "dotenv": "^16.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^3.2.1",
+    "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.5.0",
+    "svelte": "^3.44.0",
+    "tailwindcss": "^3.0.23"
+  },
+  "type": "module"
 }
