--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,6 +27,7 @@ jobs:
         black . --check
   deploy:
     runs-on: ubuntu-latest 
+    needs: lint
     steps:
     - name: executing remote ssh deploy commands
       uses: appleboy/ssh-action@master
