--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,6 @@ services:
   redis:
     image: redis:alpine
 
-
   backend:
     image: qwork-backend
     build:
@@ -63,11 +62,27 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - ./frontend/Caddyfile_prod:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
+
+  prometheus:
+    image: prom/prometheus:latest
+    volumes:
+      - ./prometheus/config/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-data:/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+
+  grafana:
+    image: grafana/grafana
+    volumes:
+      - grafana-data:/var/lib/grafana
 
 
 volumes:
   caddy_data:
   caddy_config:
   postgres-db:
+  prometheus-data:
+  grafana-data:
