--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -10,10 +10,23 @@ services:
       - POSTGRES_USER=${POSTGRES_USER:?err}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:?err}
       - POSTGRES_DB=${POSTGRES_DB:?err}
+    depends_on:
+      - fluent-bit
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: db.logs
 
   redis:
     image: redis:alpine
-
+    depends_on:
+      - fluent-bit
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: redis.logs
 
   backend:
     image: qwork-backend
@@ -28,6 +41,12 @@ services:
     depends_on:
       - db
       - redis
+      - fluent-bit
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: backend.logs
   
   dramatiq:
     image: qwork-backend
@@ -43,6 +62,12 @@ services:
     depends_on:
       - db
       - redis
+      - fluent-bit
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: dramatiq.logs
 
   scheduler:
     image: qwork-backend
@@ -56,6 +81,12 @@ services:
     depends_on:
       - db
       - redis
+      - fluent-bit
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: scheduler.logs
 
   frontend:
     image: qwork-frontend
@@ -64,33 +95,80 @@ services:
       args:
         - VITE_API_URL=${VITE_API_URL:?err}
         - VITE_ENVIRONMENT=${VITE_ENVIRONMENT:?err}
+    depends_on:
+      - fluent-bit
     ports:
       - "8000:80"
     volumes:
       - ./frontend/Caddyfile_local:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: frontend.logs
 
   prometheus:
     image: prom/prometheus:latest
     ports:
       - "9090:9090"
+    depends_on:
+      - fluent-bit
     volumes:
       - ./prometheus/config/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus-data:/prometheus
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: prometheus.logs
 
   grafana:
     image: grafana/grafana
     ports:
       - "3000:3000"
+    depends_on:
+      - fluent-bit
     volumes:
       - grafana-data:/var/lib/grafana
-    
-  # fluent-bit:
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: grafana.logs
+  
+  cloudbeaver:
+    image: dbeaver/cloudbeaver:latest
+    ports:
+    - "8080:8978"
+    volumes:
+      - cloudbeaver-data:/opt/cloudbeaver/workspace
+  
+  fluent-bit:
+    image: fluent/fluent-bit
+    ports:
+      - "24224:24224"
+      - "24224:24224/udp"
+    depends_on:
+      - zinc
+    volumes:
+      - ./fluent-bit/conf:/fluent-bit/etc
 
-  # zinc
+  zinc:
+    image: qwork-zinc
+    build:
+      context: ./zinc
+      dockerfile: Dockerfile
+      args:
+        - ZINC_FIRST_ADMIN_USER=admin
+        - ZINC_FIRST_ADMIN_PASSWORD=admin
+    ports:
+      - "4080:4080"
+    volumes:
+      - zinc-data:/data # TODO data does not persist after container recreating 
 
 volumes:
   caddy_data:
@@ -98,3 +176,5 @@ volumes:
   postgres-db:
   prometheus-data:
   grafana-data:
+  cloudbeaver-data:
+  zinc-data:
