--- a/fluent-bit/conf/fluent-bit.conf
+++ b/fluent-bit/conf/fluent-bit.conf
@@ -14,5 +14,5 @@
     Host zinc
     Port 4080
     Generate_ID On
-    HTTP_User admin
-    HTTP_Passwd admin
+    HTTP_User ${ZINC_FIRST_ADMIN_USER}
+    HTTP_Passwd ${ZINC_FIRST_ADMIN_PASSWORD}
