--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -34,7 +34,8 @@ services:
       - "8001:8000"
     command:
       sh -c "chmod +x /app/scripts/run.local.sh &&
-          ./scripts/run.local.sh"
+             chmod +x /app/scripts/wait-for-it.sh &&
+             ./scripts/run.local.sh"
     volumes:
       - ./backend:/app
     depends_on:
@@ -56,6 +57,7 @@ services:
       - "9191:9191"
     command: >
       sh -c "chmod +x /app/scripts/run_dramatiq.local.sh &&
+             chmod +x /app/scripts/wait-for-it.sh &&
              ./scripts/run_dramatiq.local.sh"
     depends_on:
       - db
