NEW: Raw intermediate results with DaisyUI on the frontend

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -vs
+#addopts = -vs
 
 testpaths =
     app/tests
@@ -15,3 +15,6 @@ python_files =
 python_functions = 
     *_test
     test_*
+
+filterwarnings =
+    ignore::DeprecationWarning
