NEW: try to deploy dirty new nlp release

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+addopts = --testmon
 #addopts = -vs
 
 testpaths =
@@ -12,7 +13,7 @@ python_files =
     tests.py
     test.py
 
-python_functions = 
+python_functions =
     *_test
     test_*
 
