--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,10 @@
 FROM python:3.10-slim
 
+# gcc for python-Levenshtein
+RUN apt-get update && \
+    apt-get -y install gcc && \
+    rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 COPY ./requirements/base.txt /app/requirements.txt
@@ -16,5 +21,5 @@ RUN chmod +x /app/scripts/wait-for-it.sh && \
 COPY ./alembic /app/alembic
 COPY ./alembic.ini /app/alembic.ini
 COPY ./app /app/app
-    
+
 CMD ["scripts/run.sh"]
