--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,6 +1,12 @@
 [pytest]
-addopts = --testmon
-; addopts = -vs --testmon
+; addopts = --testmon
+addopts = -vs --testmon
+; addopts = -vs --no-testmon
+env =
+    UNIT_TESTS=1
+    DATABASE_URL=postgresql://postgres:postgres@localhost:5432/qwork_test
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
 
 testpaths =
     app/tests
