--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,9 @@
 ### STAGE 1: Build ###
-FROM node:14.13-alpine AS build
+FROM node:18-alpine AS build
 
 WORKDIR /usr/src/app
 COPY package.json ./
+COPY package-lock.json ./
 RUN npm install
 
 COPY . .
